Add loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <section id="loadingScreen">
+        <div id="loader"></div>
+    </section>
 </body>
 </html>
