--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,18 @@
     <section id="loadingScreen">
         <div id="loader"></div>
     </section>
+    <button type="button" id="controlsOpen">i</button>
+    <section id="controlsPanel" class="fadeOut">
+        <div class="modal"> 
+            <strong>CONTROLS</strong>
+            <div class="instructions">
+                <p>tab - toggle camera mode</p>
+                <p>shift - run</p>
+                <p>wasd or arrow keys - move</p>
+                <p>z -s random dance</p>
+            </div>
+            <button type="button" id="controlsClose">Close</button>
+        </div>
+    </section>
 </body>
 </html>
