Update modal UI

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
         <div class="modal"> 
             <strong>CONTROLS</strong>
             <div class="instructions">
-                <p>tab - toggle camera mode</p>
-                <p>shift - run</p>
-                <p>wasd or arrow keys - move</p>
-                <p>z -s random dance</p>
+                <p>TAB - Toggle camera mode</p>
+                <p>SHIFT - Run</p>
+                <p>WASD or ARROW keys - Move</p>
+                <p>Z - Random dance</p>
             </div>
             <button type="button" id="controlsClose">Close</button>
         </div>
