--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
         <div class="modal"> 
             <strong>CONTROLS</strong>
             <div class="instructions">
-                <p>TAB - Toggle camera mode</p>
-                <p>SHIFT - Run</p>
                 <p>WASD or ARROW keys - Move</p>
+                <p>SPACE - Jump</p>
+                <p>SHIFT - Run</p>
+                <p>TAB - Toggle camera mode</p>
                 <p>Z - Random dance</p>
             </div>
             <button type="button" id="controlsClose">Close</button>
