--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,10 @@
             <button type="button" id="controlsClose">Close</button>
         </div>
     </section>
+
+    <div class="point visible" id="point-0">
+        <div class="label">1</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae impedit aliquid facere eaque voluptatum consequuntur veniam dolore ipsum explicabo culpa? Odio perspiciatis amet a dignissimos expedita dolorum quasi! Molestiae, non?</div>
+    </div>
 </body>
 </html>
