Add new objects and points

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,17 @@
         </div>
     </section>
 
-    <div class="point visible" id="point-0">
+    <div class="point" id="point-0">
         <div class="label">1</div>
-        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae impedit aliquid facere eaque voluptatum consequuntur veniam dolore ipsum explicabo culpa? Odio perspiciatis amet a dignissimos expedita dolorum quasi! Molestiae, non?</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+    <div class="point" id="point-1">
+        <div class="label">2</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+    <div class="point" id="point-2">
+        <div class="label">3</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
     </div>
 </body>
 </html>
