--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,24 @@
 
     <div class="point" id="point-0">
         <div class="label">1</div>
-        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="text">
+            <h2>Head</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
     </div>
     <div class="point" id="point-1">
         <div class="label">2</div>
-        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="text">
+            <h2>Computer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
     </div>
     <div class="point" id="point-2">
         <div class="label">3</div>
-        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div class="text">
+            <h2>Television</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
     </div>
 </body>
 </html>
