--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,29 @@
 <body>
     <canvas class="webgl"></canvas>
     <section id="loadingScreen">
+        <div class="instructions">
+            <strong>CONTROLS</strong>
+            <p>WASD or ARROW keys - Move</p>
+            <p>SPACE - Jump</p>
+            <p>SHIFT - Run</p>
+            <p>TAB - Toggle camera mode</p>
+            <p>Z - Random dance</p>
+        </div>
         <div id="loader"></div>
+        <button type="button" class="primaryBtn fadeOut" id="startApp">START</button>
     </section>
     <button type="button" id="controlsOpen">i</button>
     <section id="controlsPanel" class="fadeOut">
         <div class="modal"> 
-            <strong>CONTROLS</strong>
             <div class="instructions">
+                <strong>CONTROLS</strong>
                 <p>WASD or ARROW keys - Move</p>
                 <p>SPACE - Jump</p>
                 <p>SHIFT - Run</p>
                 <p>TAB - Toggle camera mode</p>
                 <p>Z - Random dance</p>
             </div>
-            <button type="button" id="controlsClose">Close</button>
+            <button type="button" class="primaryBtn" id="controlsClose">Close</button>
         </div>
     </section>
 
