--- a/src/index.html
+++ b/src/index.html
@@ -4,56 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mixamo test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 <body>
-    <canvas class="webgl"></canvas>
-    <section id="loadingScreen" class="loadingScreen">
-        <div class="instructions">
-            <h2>CONTROLS</h2>
-            <p>WASD or ARROW keys - Move</p>
-            <p>SPACE - Jump</p>
-            <p>SHIFT - Run</p>
-            <p>TAB - Toggle camera mode</p>
-            <p>Z - Random dance</p>
-        </div>
-        <div class="loader"></div>
-        <button type="button" class="primaryBtn" id="startApp">START</button>
-    </section>
-    <button type="button" id="controlsOpen" class="controlsOpen" tabindex="-1">i</button>
-    <section id="controlsPanel" class="controlsPanel fadeOut">
-        <div class="modal"> 
-            <div class="instructions">
-                <h2>CONTROLS</h2>
-                <p>WASD or ARROW keys - Move</p>
-                <p>SPACE - Jump</p>
-                <p>SHIFT - Run</p>
-                <p>TAB - Toggle camera mode</p>
-                <p>Z - Random dance</p>
+    <main>
+        <section class="hidden notSupported" id="browserNotSupported">
+            <p class="info">i</p>
+            <p>Sorry, this web browser is currently not supported.</p>
+            <p>You can try the following browsers:</p>
+            <div class="browsers">
+                <div class="browser">
+                    <p><i class="fab fa-chrome"></i></p>
+                    <p>Chrome</p>
+                </div>
+                <div class="browser">
+                    <p><i class="fab fa-firefox"></i></p>
+                    <p>Firefox</p>
+                </div>
+                <div class="browser">
+                    <p><i class="fab fa-edge"></i></p>
+                    <p>Edge</p>
+                </div>
+                <div class="browser">
+                    <p><i class="fab fa-opera"></i></p>
+                    <p>Opera</p>
+                </div>
             </div>
-            <button type="button" class="primaryBtn fadeIn" id="controlsClose">Close</button>
-        </div>
-    </section>
-
-    <div class="point" id="point-0">
-        <div class="label">1</div>
-        <div class="text">
-            <h2>Head</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-    </div>
-    <div class="point" id="point-1">
-        <div class="label">2</div>
-        <div class="text">
-            <h2>Computer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-    </div>
-    <div class="point" id="point-2">
-        <div class="label">3</div>
-        <div class="text">
-            <h2>Television</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-    </div>
+        </section>
+        <section class="hidden notSupported" id="mobileNotSupported">
+            <p class="info">i</p>
+            <p>Sorry, this is currently a desktop only experiences.</p>
+            <p>Please open the page in a desktop web browser.</p>
+        </section>
+        <section id="supported">
+            <canvas class="webgl"></canvas>
+            <section id="loadingScreen" class="loadingScreen">
+                <div class="instructions">
+                    <h2>CONTROLS</h2>
+                    <p>WASD or ARROW keys - Move</p>
+                    <p>SPACE - Jump</p>
+                    <p>SHIFT - Run</p>
+                    <p>TAB - Toggle camera mode</p>
+                    <p>Z - Random dance</p>
+                </div>
+                <div class="loader"></div>
+                <button type="button" class="primaryBtn" id="startApp">START</button>
+            </section>
+            <button type="button" id="controlsOpen" class="controlsOpen" tabindex="-1">i</button>
+            <section id="controlsPanel" class="controlsPanel fadeOut">
+                <div class="modal"> 
+                    <div class="instructions">
+                        <h2>CONTROLS</h2>
+                        <p>WASD or ARROW keys - Move</p>
+                        <p>SPACE - Jump</p>
+                        <p>SHIFT - Run</p>
+                        <p>TAB - Toggle camera mode</p>
+                        <p>Z - Random dance</p>
+                    </div>
+                    <button type="button" class="primaryBtn fadeIn" id="controlsClose">Close</button>
+                </div>
+            </section>
+        
+            <div class="point" id="point-0">
+                <div class="label">1</div>
+                <div class="text">
+                    <h2>Head</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="point" id="point-1">
+                <div class="label">2</div>
+                <div class="text">
+                    <h2>Computer</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="point" id="point-2">
+                <div class="label">3</div>
+                <div class="text">
+                    <h2>Television</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+<script>
+    function isIE(){
+        if(window.navigator.userAgent.match(/MSIE|Trident/) !== null){
+            document.getElementById("supported").classList.add("hidden");
+            document.getElementById("browserNotSupported").classList.remove("hidden");
+        }
+    }
+    isIE();
+</script>
 </body>
 </html>
